--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "name": "Create Elm App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "192x192",
+      "src": "bomb.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
